--- a/templates/admin/admin_terme/show.html.twig
+++ b/templates/admin/admin_terme/show.html.twig
@@ -39,7 +39,7 @@
 
         {% include 'common/footer.actions.html.twig' with {
             'class': 'w-full mt-6 pt-8 border-t border-light-gray-100',
-            'title': terme.contents and terme.contents.first.titreFr ? terme.contents.first.titreFr : "Glossaire Sfifa",
+            'title': "Awal",
             'url': url('show_terme', {'id': terme.id}),
             'status': terme.statut
         } %}
