navbar,articles,backoffice

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -47,12 +47,12 @@
 				</li>
 
 				<li>
-					<a href="{{ path('app_admin_cgu_index') }}" class="flex items-center gap-3 px-3 py-2 rounded-lg transition-colors duration-200 {{ app.request.pathinfo starts with path('app_admin_cgu_index') ? 'bg-white text-primary-600' : 'text-white hover:bg-white hover:text-primary-600' }}">
+					<a href="{{ path('app_admin_about_index') }}" class="flex items-center gap-3 px-3 py-2 rounded-lg transition-colors duration-200 {{ app.request.pathinfo starts with path('app_admin_about_index') ? 'bg-white text-primary-600' : 'text-white hover:bg-white hover:text-primary-600' }}">
 						<svg width="24" height="25" viewbox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M6 15.2852L8 17.2852L12.5 12.7852M8 8.28516V5.48516C8 4.36505 8 3.805 8.21799 3.37718C8.40973 3.00085 8.71569 2.69489 9.09202 2.50314C9.51984 2.28516 10.0799 2.28516 11.2 2.28516H18.8C19.9201 2.28516 20.4802 2.28516 20.908 2.50314C21.2843 2.69489 21.5903 3.00085 21.782 3.37718C22 3.805 22 4.36505 22 5.48516V13.0852C22 14.2053 22 14.7653 21.782 15.1931C21.5903 15.5695 21.2843 15.8754 20.908 16.0672C20.4802 16.2852 19.9201 16.2852 18.8 16.2852H16M5.2 22.2852H12.8C13.9201 22.2852 14.4802 22.2852 14.908 22.0672C15.2843 21.8754 15.5903 21.5695 15.782 21.1931C16 20.7653 16 20.2053 16 19.0852V11.4852C16 10.3651 16 9.805 15.782 9.37718C15.5903 9.00085 15.2843 8.69489 14.908 8.50314C14.4802 8.28516 13.9201 8.28516 12.8 8.28516H5.2C4.0799 8.28516 3.51984 8.28516 3.09202 8.50314C2.71569 8.69489 2.40973 9.00085 2.21799 9.37718C2 9.805 2 10.3651 2 11.4852V19.0852C2 20.2053 2 20.7653 2.21799 21.1931C2.40973 21.5695 2.71569 21.8754 3.09202 22.0672C3.51984 22.2852 4.07989 22.2852 5.2 22.2852Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 						</svg>
 
-						Conditions générales
+						About
 					</a>
 				</li>
 
