--- a/templates/admin/admin_about/show.html.twig
+++ b/templates/admin/admin_about/show.html.twig
@@ -17,7 +17,7 @@
                         </h1>
                     </div>
                     <div class="flex items-center space-x-3">
-                        <a href="{{ path('app_admin_cgu_index') }}" class="flex  items-center cursor-pointer px-4 py-2 bg-white border border-light-gray-100 text-gray-700 rounded-lg hover:bg-gray-100">
+                        <a href="{{ path('app_admin_about_index') }}" class="flex  items-center cursor-pointer px-4 py-2 bg-white border border-light-gray-100 text-gray-700 rounded-lg hover:bg-gray-100">
                             Retour
                         </a>
 
