--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,17 +3,7 @@
 
 {% block content %}
 
-{% include 'home/hero-section.html.twig' %}
-
-{% include 'home/about-section.html.twig' %}
-
-{% include 'home/features-section.html.twig' %}
-
-{% include 'home/blog-section.html.twig' %}
-
-{% include 'home/stats-section.html.twig' %}
-
-{% include 'home/cta-section.html.twig' %}
+<p>HOME</p>
 
 {% endblock %}
 
