--- a/templates/admin/admin_about/_form.html.twig
+++ b/templates/admin/admin_about/_form.html.twig
@@ -118,7 +118,7 @@
     <div class="flex items-center mt-6 border-t pt-4 border-gray-300">
         <div class="flex flex-row ml-auto space-x-3 gap-1">
 
-            <a href="{{ path('app_admin_cgu_index') }}" type="button" class="bg-white border border-gray-300 px-4 py-2 rounded-lg font-semibold flex items-center gap-2 text-lg text-gray-700 hover:bg-gray-50">
+            <a href="{{ path('app_admin_about_index') }}" type="button" class="bg-white border border-gray-300 px-4 py-2 rounded-lg font-semibold flex items-center gap-2 text-lg text-gray-700 hover:bg-gray-50">
                 Annuler
             </a>
             <button type="submit"
