--- a/templates/admin/admin_about/index.html.twig
+++ b/templates/admin/admin_about/index.html.twig
@@ -11,7 +11,7 @@
             <div class="flex flex-wrap justify-between items-center gap-4">
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">
-                       Conditions générales
+                       About
                     </h1>
                 </div>
                 {% if documents|length == 0 %}
