--- a/templates/admin/admin_article/show.html.twig
+++ b/templates/admin/admin_article/show.html.twig
@@ -12,7 +12,7 @@
             <div class="flex flex-wrap justify-between items-center gap-4">
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">
-                        Gestion des Récits de vie
+                        تقارير آوال فيمينا 
                     </h1>
                 </div>
                 <div class="flex items-center space-x-3">
