--- a/templates/common/about.html.twig
+++ b/templates/common/about.html.twig
@@ -9,7 +9,7 @@
 			<!-- Title -->
 			<div class="text-center mb-2">
 				<h1 class="text-2xl md:text-4xl lg:text-4xl font-semibold text-dark-600 mb-3 md:mb-4">
-					{{ about.title }}
+					من نحن
 				</h1>
 				<p class="text-dark-600 text-base md:text-lg lg:text-xl max-w-2xl mt-4 md:mt-5 mx-auto leading-relaxed">
 					{{ about.shortDescription }}
